cmake_minimum_required(VERSION 3.27)
project(Cpp)

set(CMAKE_CXX_STANDARD 98)
set(CMAKE_BUILD_TYPE Debug)


#############CPP MODULE00############
add_executable(00.ex00              #
        00/ex00/megaphone.cpp
        04/ex00/Animal.cpp
        04/ex00/Animal.hpp)      #
                                    #
add_executable(00.ex01              #
        00/ex01/Contact.hpp         #
        00/ex01/Contact.cpp         #
        00/ex01/PhoneBook.cpp       #
        00/ex01/PhoneBook.hpp       #
        00/ex01/main.cpp)           #
                                    #
add_executable(00.ex02              #
        00/ex02/Account.hpp         #
        00/ex02/Account.cpp         #
        00/ex02/tests.cpp)          #
#####################################

#############CPP MODULE01############
add_executable(01.ex00              #
        01/ex00/main.cpp            #
        01/ex00/Zombie.cpp          #
        01/ex00/Zombie.hpp          #
        01/ex00/randomChump.cpp     #
        01/ex00/newZombie.cpp)      #
                                    #
add_executable(01.ex01              #
        01/ex01/main.cpp            #
        01/ex01/Zombie.cpp          #
        01/ex01/Zombie.hpp          #
        01/ex01/zombieHorde.cpp)    #
                                    #
add_executable(01.ex02              #
        01/ex02/main.cpp)           #
                                    #
add_executable(01.ex03              #
        01/ex03/Weapon.cpp          #
        01/ex03/Weapon.hpp          #
        01/ex03/main.cpp            #
        01/ex03/HumanA.cpp          #
        01/ex03/HumanA.hpp          #
        01/ex03/HumanB.cpp          #
        01/ex03/HumanB.hpp)         #
                                    #
add_executable(01.ex04              #
        01/ex04/main.cpp)           #
                                    #
add_executable(01.ex05              #
        01/ex05/main.cpp            #
        01/ex05/Harl.cpp            #
        01/ex05/Harl.hpp)           #
                                    #
add_executable(01.ex06              #
        01/ex06/main.cpp            #
        01/ex06/Harl.cpp            #
        01/ex06/Harl.hpp)           #
#####################################

#############CPP MODULE02############
add_executable(02.ex00              #
        02/ex00/main.cpp            #
        02/ex00/Fixed.cpp           #
        02/ex00/Fixed.hpp)          #
                                    #
add_executable(02.ex01              #
        02/ex01/main.cpp            #
        02/ex01/Fixed.cpp           #
        02/ex01/Fixed.hpp)          #
                                    #
add_executable(02.ex02              #
        02/ex02/main.cpp            #
        02/ex02/Fixed.cpp           #
        02/ex02/Fixed.hpp)          #
                                    #
add_executable(02.ex03              #
        02/ex03/Fixed.cpp           #
        02/ex03/Fixed.hpp           #
        02/ex03/main.cpp            #
        02/ex03/Point.cpp           #
        02/ex03/Point.cpp           #
        02/ex03/bsp.cpp)            #
#####################################

#####################################
add_executable(03.ex00              #
        03/ex00/main.cpp            #
        03/ex00/ClapTrap.cpp        #
        03/ex00/ClapTrap.hpp)       #
                                    #
add_executable(03.ex01              #
        03/ex01/main.cpp            #
        03/ex01/ClapTrap.cpp        #
        03/ex01/ClapTrap.hpp        #
        03/ex01/ScavTrap.cpp        #
        03/ex01/ScavTrap.hpp)       #
                                    #
add_executable(03.ex02              #
        03/ex02/main.cpp            #
        03/ex02/ClapTrap.cpp        #
        03/ex02/ClapTrap.hpp        #
        03/ex02/ScavTrap.cpp        #
        03/ex02/ScavTrap.hpp        #
        03/ex02/FragTrap.cpp        #
        03/ex02/FragTrap.hpp)       #
                                    #
add_executable(03.ex03              #
        03/ex03/main.cpp            #
        03/ex03/ClapTrap.cpp        #
        03/ex03/ClapTrap.hpp        #
        03/ex03/ScavTrap.cpp        #
        03/ex03/ScavTrap.hpp        #
        03/ex03/FragTrap.cpp        #
        03/ex03/FragTrap.hpp        #
        03/ex03/DiamondTrap.cpp     #
        03/ex03/DiamondTrap.hpp)    #
#####################################

#####################################
add_executable(04.ex00              #
        04/ex00/main.cpp            #
        04/ex00/Animal.cpp          #
        04/ex00/Animal.hpp          #
        04/ex00/Dog.cpp             #
        04/ex00/Dog.hpp             #
        04/ex00/Cat.cpp             #
        04/ex00/Cat.hpp             #
        04/ex00/WrongAnimal.cpp     #
        04/ex00/WrongAnimal.hpp     #
        04/ex00/WrongCat.cpp        #
        04/ex00/WrongCat.hpp)       #
#####################################

#####################################
add_executable(04.ex01              #
        04/ex01/main.cpp            #
        04/ex01/Animal.cpp          #
        04/ex01/Animal.hpp          #
        04/ex01/Dog.cpp             #
        04/ex01/Dog.hpp             #
        04/ex01/Cat.cpp             #
        04/ex01/Cat.hpp             #
        04/ex01/Brain.cpp           #
        04/ex01/Brain.hpp)          #
#####################################

#####################################
add_executable(04.ex02              #
        04/ex02/main.cpp            #
        04/ex02/Animal.cpp          #
        04/ex02/Animal.hpp          #
        04/ex02/Dog.cpp             #
        04/ex02/Dog.hpp             #
        04/ex02/Cat.cpp             #
        04/ex02/Cat.hpp             #
        04/ex02/Brain.cpp           #
        04/ex02/Brain.hpp)          #
#####################################

#####################################
add_executable(04.ex03              #
        04/ex03/main.cpp            #
        04/ex03/AMateria.cpp        #
        04/ex03/AMateria.hpp        #
        04/ex03/Ice.cpp             #
        04/ex03/Ice.hpp             #
        04/ex03/Cure.cpp            #
        04/ex03/Cure.hpp            #
        04/ex03/ICharacter.cpp      #
        04/ex03/ICharacter.hpp      #
        04/ex03/MateriaSource.cpp   #
        04/ex03/MateriaSource.hpp   #
        04/ex03/IMateriaSource.cpp  #
        04/ex03/IMateriaSource.hpp  #
        04/ex03/Character.cpp       #
        04/ex03/Character.hpp)      #
#####################################